--- a/html/001.html
+++ b/html/001.html
@@ -169,9 +169,23 @@
                           <tbody>
 
                           <tr>
-                            <td align="left" style="font-size:0px;padding:0;word-break:break-word;">
+                            <td align="center" style="font-size:0px;padding:10px;word-break:break-word;">
 
-                              <div style="font-family:Arial, sans-serif;font-size:16px;font-weight:700;line-height:20px;text-align:left;color:#ffffff;">Только в&nbsp;период с&nbsp;07.10.2022 до&nbsp;31.12.2022 предоставляем дополнительные скидки на&nbsp;пародиффузионные мембраны и пароизоляционные мембраны TEGOLA</div>
+                              <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
+                                <tbody>
+                                <tr>
+                                  <td style="width:256px;">
+
+                                    <a href="https://tegola.ru/" target="_blank">
+
+                                      <img height="auto" src="https://caezar47.github.io/tegola/img/001/logo2.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="256">
+
+                                    </a>
+
+                                  </td>
+                                </tr>
+                                </tbody>
+                              </table>
 
                             </td>
                           </tr>
@@ -199,23 +213,9 @@
                           <tbody>
 
                           <tr>
-                            <td align="center" style="font-size:0px;padding:0;word-break:break-word;">
+                            <td align="left" style="font-size:0px;padding:0 10px;word-break:break-word;">
 
-                              <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
-                                <tbody>
-                                <tr>
-                                  <td style="width:276px;">
-
-                                    <a href="https://tegola.ru/" target="_blank">
-
-                                      <img height="auto" src="https://caezar47.github.io/tegola/img/001/logo.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
-
-                                    </a>
-
-                                  </td>
-                                </tr>
-                                </tbody>
-                              </table>
+                              <div style="font-family:Arial, sans-serif;font-size:16px;font-weight:400;line-height:20px;text-align:left;color:#ffffff;">Только в&nbsp;период с&nbsp;07.10.2022 до&nbsp;31.12.2022 предоставляем дополнительные скидки на&nbsp;пародиффузионные мембраны и пароизоляционные мембраны TEGOLA</div>
 
                             </td>
                           </tr>
@@ -309,7 +309,7 @@
 
                                                           <a href="https://tegola.ru/product/difbar-95-plyus" target="_blank">
 
-                                                            <img height="auto" src="https://caezar47.github.io/tegola/img/001/products-item1.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
+                                                            <img height="auto" src="https://caezar47.github.io/tegola/img/001/products-item1-2.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
 
                                                           </a>
 
@@ -411,7 +411,7 @@
 
                                                           <a href="https://tegola.ru/product/difbar-130-plyus" target="_blank">
 
-                                                            <img height="auto" src="https://caezar47.github.io/tegola/img/001/products-item2.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
+                                                            <img height="auto" src="https://caezar47.github.io/tegola/img/001/products-item2-2.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
 
                                                           </a>
 
@@ -545,7 +545,7 @@
 
                                                           <a href="https://tegola.ru/product/difbar-100" target="_blank">
 
-                                                            <img height="auto" src="https://caezar47.github.io/tegola/img/001/products-item3.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
+                                                            <img height="auto" src="https://caezar47.github.io/tegola/img/001/products-item3-2.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
 
                                                           </a>
 
@@ -647,7 +647,7 @@
 
                                                           <a href="https://tegola.ru/product/alyubar-aktiv" target="_blank">
 
-                                                            <img height="auto" src="https://caezar47.github.io/tegola/img/001/products-item4.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
+                                                            <img height="auto" src="https://caezar47.github.io/tegola/img/001/products-item4-2.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="276">
 
                                                           </a>
 
@@ -773,13 +773,13 @@
     </tbody>
   </table>
 
-  <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F90A0A;background-color:#F90A0A;width:100%;">
+  <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#c31514;background-color:#c31514;width:100%;">
     <tbody>
     <tr>
       <td>
 
 
-        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#F90A0A" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+        <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#c31514" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
 
 
         <div style="margin:0px auto;max-width:600px;">
@@ -831,8 +831,8 @@
                                                     <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:separate;width:100%;line-height:100%;">
                                                       <tbody>
                                                       <tr>
-                                                        <td align="center" bgcolor="#ffffff" role="presentation" style="border:none;border-radius:0px;cursor:auto;mso-padding-alt:15px 25px;background:#ffffff;" valign="middle">
-                                                          <a href="#" style="display:inline-block;background:#ffffff;color:#F90A0A;font-family:Arial, sans-serif;font-size:26px;font-weight:700;line-height:32px;margin:0;text-decoration:none;text-transform:uppercase;padding:15px 25px;mso-padding-alt:0px;border-radius:0px;" target="_blank">
+                                                        <td align="center" bgcolor="#ffffff" role="presentation" style="border:none;border-radius:0px;cursor:auto;mso-padding-alt:15px 20px;background:#ffffff;" valign="middle">
+                                                          <a href="#" style="display:inline-block;background:#ffffff;color:#c31514;font-family:Arial, sans-serif;font-size:24px;font-weight:700;line-height:32px;margin:0;text-decoration:none;text-transform:uppercase;padding:15px 20px;mso-padding-alt:0px;border-radius:0px;" target="_blank">
                                                             Сделать заказ
                                                           </a>
                                                         </td>
@@ -850,7 +850,7 @@
                                                       <tbody>
                                                       <tr>
                                                         <td align="center" bgcolor="transparent" role="presentation" style="border:none;border-radius:0px;cursor:auto;mso-padding-alt:0;background:transparent;" valign="middle">
-                                                          <a href="https://tegola.ru/" style="display:inline-block;background:transparent;color:#ffffff;font-family:Arial, sans-serif;font-size:32px;font-weight:700;line-height:38px;margin:0;text-decoration:none;text-transform:none;padding:0;mso-padding-alt:0px;border-radius:0px;" target="_blank">
+                                                          <a href="https://tegola.ru/" style="display:inline-block;background:transparent;color:#ffffff;font-family:Arial, sans-serif;font-size:28px;font-weight:700;line-height:38px;margin:0;text-decoration:none;text-transform:none;padding:0;mso-padding-alt:0px;border-radius:0px;" target="_blank">
                                                             tegola.ru
                                                           </a>
                                                         </td>
@@ -898,7 +898,7 @@
                                                       <tbody>
                                                       <tr>
                                                         <td align="center" bgcolor="transparent" role="presentation" style="border:none;border-radius:0px;cursor:auto;mso-padding-alt:0;background:transparent;" valign="middle">
-                                                          <a href="tel:88005119802" style="display:inline-block;background:transparent;color:#ffffff;font-family:Arial, sans-serif;font-size:32px;font-weight:700;line-height:38px;margin:0;text-decoration:none;text-transform:none;padding:0;mso-padding-alt:0px;border-radius:0px;" target="_blank">
+                                                          <a href="tel:88005119802" style="display:inline-block;background:transparent;color:#ffffff;font-family:Arial, sans-serif;font-size:28px;font-weight:700;line-height:38px;margin:0;text-decoration:none;text-transform:none;padding:0;mso-padding-alt:0px;border-radius:0px;" target="_blank">
                                                             8 (800) 511-98-02
                                                           </a>
                                                         </td>
@@ -930,6 +930,15 @@
 
                               <!--[if mso | IE]></td></tr></table><![endif]-->
 
+
+                            </td>
+                          </tr>
+
+                          <tr>
+                            <td align="center" style="font-size:0px;padding:15px 0 0 0;word-break:break-word;">
+
+                              <div style="font-family:Arial, sans-serif;font-size:12px;line-height:18px;text-align:center;color:#ffffff;">Если вы&nbsp;не&nbsp;заинтересованы в&nbsp;получении информации о&nbsp;новостях и&nbsp;акциях для наших постоянных клиентов, вы&nbsp;можете отписаться от&nbsp;рассылки, кликнув по&nbsp;ссылке ниже. <br>
+                                <a class="footer__unsubscribe" href="#" style="color: #fff;">Отписаться от&nbsp;рассылки</a></div>
 
                             </td>
                           </tr>
